; ModuleID = '/home/carl/AnghaBench/git/extr_sha1dc_git.c_git_SHA1DCFinal.c'
source_filename = "/home/carl/AnghaBench/git/extr_sha1dc_git.c_git_SHA1DCFinal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [51 x i8] c"SHA-1 appears to be part of a collision attack: %s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @git_SHA1DCFinal(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @SHA1DCFinal(i8* %5, i32* %6)
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  br label %14

10:                                               ; preds = %2
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @sha1_to_hex(i8* %11)
  %13 = call i32 @die(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %12)
  br label %14

14:                                               ; preds = %10, %9
  ret void
}

declare dso_local i32 @SHA1DCFinal(i8*, i32*) #1

declare dso_local i32 @die(i8*, i32) #1

declare dso_local i32 @sha1_to_hex(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
